// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomePage component Renders <Difficulties /> 1`] = `
<body>
  <div>
    <div>
      <div
        class="h-full w-full overflow-hidden"
      >
        <div
          class="col w-full h-full"
          data-testid="home-container"
        >
          <div>
            <div
              class="text-center col gap-3"
              data-testid="render-difficulties-container"
            >
              <h1
                class="text-xl"
              >
                Choose difficulty
              </h1>
              <div
                class="flex gap-2 justify-center flex-wrap"
              >
                <span
                  data-testid="easy"
                >
                  <button
                    class="sc-bcPKhP fjXGcT"
                  >
                    easy
                     (
                    3
                    )
                  </button>
                </span>
                <span
                  data-testid="hard"
                >
                  <button
                    class="sc-bcPKhP fjXGcT"
                  >
                    hard
                     (
                    2
                    )
                  </button>
                </span>
                <span
                  data-testid="medium"
                >
                  <button
                    class="sc-bcPKhP fjXGcT"
                  >
                    medium
                     (
                    3
                    )
                  </button>
                </span>
                <span
                  data-testid="all difficulties"
                >
                  <button
                    class="sc-bcPKhP fjXGcT"
                  >
                    all difficulties
                     (
                    8
                    )
                  </button>
                </span>
              </div>
            </div>
          </div>
          <div
            class="bg-accent absolute -z-10 rounded-full w-64 h-64"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`HomePage component Renders <Difficulties />, <Categories /> and <Play /> 1`] = `
<body>
  <div>
    <div>
      <div
        class="h-full w-full overflow-hidden"
      >
        <div
          class="col w-full h-full"
          data-testid="home-container"
        >
          <div
            class="flex justify-between items-center h-full"
          >
            <div
              class="col items-center justify-center bg-accent h-full rounded-full"
            >
              <div>
                <div
                  class="text-center col gap-3"
                  data-testid="render-difficulties-container"
                >
                  <h1
                    class="text-xl"
                  >
                    Choose difficulty
                  </h1>
                  <div
                    class="flex gap-2 justify-center flex-col"
                  >
                    <span
                      data-testid="easy"
                    >
                      <button
                        class="sc-bcPKhP fjXGcT"
                      >
                        easy
                         (
                        3
                        )
                      </button>
                    </span>
                    <span
                      data-testid="hard"
                    >
                      <button
                        class="sc-bcPKhP fjXGcT"
                      >
                        hard
                         (
                        2
                        )
                      </button>
                    </span>
                    <span
                      data-testid="medium"
                    >
                      <button
                        class="sc-bcPKhP fjXGcT"
                      >
                        medium
                         (
                        3
                        )
                      </button>
                    </span>
                    <span
                      data-testid="all difficulties"
                    >
                      <button
                        class="sc-bcPKhP fjXGcT"
                      >
                        all difficulties
                         (
                        8
                        )
                      </button>
                    </span>
                  </div>
                </div>
              </div>
              <div>
                <a
                  data-testid="play-link"
                  href="/game?difficulty=&categories="
                >
                  <span
                    data-testid="play-button"
                  >
                    <button
                      class="sc-bcPKhP dmjhkA"
                    >
                      Start Playing
                    </button>
                  </span>
                </a>
              </div>
            </div>
            <div
              class="text-center col gap-3 flex-1 justify-center h-11/12 overflow-y-auto"
              data-testid="render-categories-container"
            >
              <h1
                class="text-xl"
              >
                Choose categories
              </h1>
              <div
                class="col gap-3"
              >
                <div
                  class="col gap-2"
                  data-testid="display-categories-container"
                >
                  <div
                    class="flex gap-2 flex-wrap justify-center"
                    data-testid="first-categories-set"
                  >
                    <span
                      data-testid="Category 1"
                    >
                      <button
                        class="sc-bcPKhP fjXGcT"
                      >
                        Category 1
                         (
                        0
                        )
                      </button>
                    </span>
                    <span
                      data-testid="Category 10"
                    >
                      <button
                        class="sc-bcPKhP fjXGcT"
                      >
                        Category 10
                         (
                        9
                        )
                      </button>
                    </span>
                    <span
                      data-testid="Category 11"
                    >
                      <button
                        class="sc-bcPKhP fjXGcT"
                      >
                        Category 11
                         (
                        10
                        )
                      </button>
                    </span>
                    <span
                      data-testid="Category 12"
                    >
                      <button
                        class="sc-bcPKhP fjXGcT"
                      >
                        Category 12
                         (
                        11
                        )
                      </button>
                    </span>
                    <span
                      data-testid="Category 13"
                    >
                      <button
                        class="sc-bcPKhP fjXGcT"
                      >
                        Category 13
                         (
                        12
                        )
                      </button>
                    </span>
                    <span
                      data-testid="Category 14"
                    >
                      <button
                        class="sc-bcPKhP fjXGcT"
                      >
                        Category 14
                         (
                        13
                        )
                      </button>
                    </span>
                    <span
                      data-testid="Category 15"
                    >
                      <button
                        class="sc-bcPKhP fjXGcT"
                      >
                        Category 15
                         (
                        14
                        )
                      </button>
                    </span>
                    <span
                      data-testid="Category 16"
                    >
                      <button
                        class="sc-bcPKhP fjXGcT"
                      >
                        Category 16
                         (
                        15
                        )
                      </button>
                    </span>
                    <span
                      data-testid="Category 17"
                    >
                      <button
                        class="sc-bcPKhP fjXGcT"
                      >
                        Category 17
                         (
                        16
                        )
                      </button>
                    </span>
                    <span
                      data-testid="Category 18"
                    >
                      <button
                        class="sc-bcPKhP fjXGcT"
                      >
                        Category 18
                         (
                        17
                        )
                      </button>
                    </span>
                  </div>
                </div>
                <div
                  class="flex justify-center gap-4"
                  data-testid="display-controls-container"
                >
                  <span
                    data-testid="show-more-button"
                  >
                    <button
                      class="sc-bcPKhP coQATf"
                    >
                      More categories
                    </button>
                  </span>
                  <span
                    data-testid="reset-categories-button"
                  >
                    <button
                      class="sc-bcPKhP fjXGcT"
                    >
                      Reset categories
                    </button>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="bg-accent absolute -z-10 rounded-full  w-10/12 h-full"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`HomePage component Renders <Welcome /> 1`] = `
<body>
  <div>
    <div>
      <div
        class="h-full w-full overflow-hidden"
      >
        <div
          class="col w-full h-full"
          data-testid="home-container"
        >
          <div
            class="text-center col items-center mx-auto"
            data-testid="welcome-container"
          >
            <h1
              class="text-3xl md:text-5xl mb-3"
            >
              Welcome to Trivia Mania
            </h1>
            <p
              class="text-xl mb-5"
            >
              Test your knowledge with exciting trivia questions.
            </p>
            <span
              data-testid="welcome-continue-button"
            >
              <button
                class="sc-bcPKhP coQATf text-2xl"
              >
                Continue
              </button>
            </span>
          </div>
          <div
            class="bg-accent absolute -z-10 rounded-full w-64 h-64"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
